# Final_Recipe_Collection_GUI

dcu/: LICENSE  README.md  pyproject.toml
dcu/src/dcu/: Rachael.py  dcu.py
dcu/src/dcu/Recipes/: Chipotle Aioli.txt  single_serving_cookie.txt
